# OpenAether

./: .gitignore  PKGBUILD  README.md  für morgen  openaether.desktop  openaether.install  package-lock.json  package.json  requirements.txt
.github/workflows/: aur.yml
backend/: Cargo.toml  hypr_env.py  logger.py  main.py  quick_dispatch.py  registry.py  requirements.txt  shell_manager.py  skill_worker.py  tauri.conf.json  tools.py
backend/config/: aliases.yaml  commands.yaml  system_prompt.txt
backend/searxng/: settings.yml
backend/skills/: agent.py  desktop.py  etude-pkg.sh  system.py  web.py
backend/src/: lib.rs  main.rs
backend/src/main/: agent.rs  bridge.rs  logger.rs  memory.rs  mod.rs  ollama.rs  settings.rs  shell.rs  verify_schemas.rs
backend/src/main/preskills/: core.rs  desktop.rs  mod.rs  package_manager.rs  system.rs  web.rs
frontend/: ELECTRON_OZONE_PLATFORM_HINT=x11  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  style.css
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: Header.tsx  InputBar.tsx  LoadingScreen.tsx  MessageItem.tsx  MessageList.tsx  SettingsModal.tsx  ToolTile.tsx
frontend/src/hooks/: useBackend.ts
logic/: logger.py  registry.py  skill_worker.py
logic/config/: commands.yaml  system_prompt.txt
logic/searxng/: settings.yml  settings.yml.bak
logic/skills/: aether-pkg.sh  agent.py  desktop.py  system.py  web.py
(+7 files in other folders)
