[package]
name = "openaether"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openaether_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["compression", "custom-protocol", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
regex = "1"
directories = "5"
sysinfo = "0.30"
chrono = "0.4"
base64 = "0.22"
futures-util = "0.3"
rig-core = { version = "0.34", features = ["derive"] }
rig-lancedb = "0.4.3"
lancedb = { version = "0.23", default-features = false }
arrow-schema = "56"
arrow-array = "56"
portable-pty = "0.8"
vte = "0.11"
libc = "0.2"
scraper = "0.19"
webbrowser = "0.8"

